force-app/main/default/objects/Lost_Serialized_Product__c/Lost_Serialized_Product__c.object-meta.xml
<CustomObject>
    <label>Lost Serialized Product</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lost Serialized Product</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>