force-app/main/default/objects/Lost_Serialized_Product__c/fields/Date_of_Lost__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Lost__c</fullName>
    <label>Date of Lost</label>
    <type>Date</type>
</CustomField>