force-app/main/default/objects/Lost_Serialized_Product__c/fields/Location_Of_Lost__c.field-meta.xml
<CustomField>
    <fullName>Location_Of_Lost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location Of Lost</label>
    <referenceTo>Location</referenceTo>
    <relationshipLabel>Lost Serialized Product</relationshipLabel>
    <relationshipName>Lost_Serialized_Product</relationshipName>
    <type>Lookup</type>
</CustomField>