force-app/main/default/objects/Lost_Serialized_Product__c/fields/Reason_for_Loss__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Loss__c</fullName>
    <label>Reason for Loss</label>
    <length>23</length>
    <type>Text</type>
</CustomField>