force-app/main/default/objects/Lost_Serialized_Product__c/fields/Serial_Number__c.field-meta.xml
<CustomField>
    <fullName>Serial_Number__c</fullName>
    <label>Serial Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>