force-app/main/default/objects/Lost_Serialized_Product__c/fields/Serialized_Product__c.field-meta.xml
<CustomField>
    <fullName>Serialized_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Serialized Product</label>
    <referenceTo>SerializedProduct</referenceTo>
    <relationshipLabel>Lost Serialized Product</relationshipLabel>
    <relationshipName>Lost_Serialized_Product</relationshipName>
    <type>Lookup</type>
</CustomField>