force-app/main/default/objects/Lost_Serialized_Product__c/fields/User_Responsible_for_Loss__c.field-meta.xml
<CustomField>
    <fullName>User_Responsible_for_Loss__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User Responsible for Loss</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Lost_Serialized_Product</relationshipName>
    <type>Lookup</type>
</CustomField>